added colors and width 853

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
             <li><a href="#inspiration" class="group-nav-link">
                     <ion-icon name="bulb-outline"></ion-icon>Inspiration
                 </a></li>
-            <li><a href="" class="group-nav-link">
+            <li><a href="#templates" class="group-nav-link">
                     <ion-icon name="newspaper-outline"></ion-icon>Templates
                 </a></li>
             <li><a href="" class="group-nav-link">
                     <ion-icon name="images-outline"></ion-icon>UI Graphics
                 </a></li>
-            <li><a href="" class="group-nav-link">
+            <li><a href="#colors" class="group-nav-link">
                     <ion-icon name="color-palette-outline"></ion-icon>Colors
                 </a></li>
             <li><a href="" class="group-nav-link">
@@ -1490,10 +1490,10 @@
                             </a>
                         </div>
 
-
-
                     </article>
                 </section>
+
+                <!--  --------- FrameWorks ---------- -->
 
                 <section class="group group-frameworks" id="frameworks">
 
@@ -1646,7 +1646,7 @@
                     </article>
                 </section>
 
-
+                <!--  --------- Inspiration ---------- -->
                 <section class="group group-inspiration" id="inspiration">
 
                     <!-- ---- section-header ------ -->
@@ -1756,6 +1756,156 @@
                                     name="open-outline"></ion-icon>
                             </a>
                         </div>
+
+                    </article>
+                </section>
+
+                <!--  --------- Colors ---------- -->
+
+                <section class="group group-colors" id="colors">
+                    <!-- ---- section-header ------ -->
+                    <header class="group-header">
+                        <ion-icon name="color-palette-outline"></ion-icon>
+                        <h2>Colors</h2>
+                    </header>
+                    <!-- ---------- section-cards ------ -->
+                    <article class="group-cards">
+
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/coolors.png" alt="Coolors"></div>
+                            <h3>Coolors</h3>
+                            <p>Struggling for inspiration when creating a color palette? No worries, Coolors offers a helping hand with their auto-generator. </p>
+                            <a href="https://coolors.co/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/color-space-logo.png" alt="ColorSpace Palette"></div>
+                            <h3>ColorSpace Palette</h3>
+                            <p>ColorSpace offers a great way of creating beautiful palettes based around a single color. Add your primary color and ColorSpace will generate some palettes to compliment it.</p>
+                            <a href="https://mycolor.space/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/color-space-logo.png" alt="ColorSpace Gradient"></div>
+                            <h3>ColorSpace Gradient</h3>
+                            <p>Another great tool from ColorSpace, but this time to help create CSS gradients.</p>
+                            <a href="https://mycolor.space/gradient" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/cssgradientcolors.svg" alt="CSS Gradient"></div>
+                            <h3>CSS Gradient</h3>
+                            <p>Another brilliant gradient generator for you to play around with. CSS Gradient is also an excellent resource if you want to learn more about the different types of gradient available to you.</p>
+                            <a href="https://cssgradient.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/colormind.svg" alt="Colormind"></div>
+                            <h3>Colormind</h3>
+                            <p>Colormind is an amazing resource for generating color palettes. You can even feed it a picture and it will create a color palette from that.</p>
+                            <a href="http://colormind.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/colorbox.svg" alt="ColorBox"></div>
+                            <h3>ColorBox</h3>
+                            <p>ColorBox is an amazing tool, open sourced by Lyft, that helps create accessible color systems. The GUI allows you to tweak your requirements as much as you like. It's a seriously powerful tool!</p>
+                            <a href="https://www.colorbox.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/flatuicolors.png" alt="Flat UI Colors"></div>
+                            <h3>Flat UI Colors</h3>
+                            <p>A good starting point for choosing a flat design color for your next project.</p>
+                            <a href="http://flatuicolors.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/materialpalette.jpg" alt="Material Palette"></div>
+                            <h3>Material Palette</h3>
+                            <p>Another great set of colors, inspired in material design. Generate and download your palette.</p>
+                            <a href="http://www.materialpalette.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/colorhunt.gif" alt="Colorhunt Palettes"></div>
+                            <h3>Colorhunt Palettes</h3>
+                            <p>Don't know what colors to use for your website? Colorhunt helps you with beautiful color palettes.</p>
+                            <a href="http://www.colorhunt.co/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/lolcolors.svg" alt="LOL Colors Palettes"></div>
+                            <h3>LOL Colors Palettes</h3>
+                            <p>Curated color palettes inspiration. Another source for great color palettes.</p>
+                            <a href="http://www.lolcolors.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/uigradients.png" alt="UI Gradients"></div>
+                            <h3>UI Gradients</h3>
+                            <p>Collection of beautiful color gradients for you to choose from and export to your project.</p>
+                            <a href="http://uigradients.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/paletton.png" alt="Paletton"></div>
+                            <h3>Paletton</h3>
+                            <p>A very popular tool which allows you to create color combinations that play well together.</p>
+                            <a href="http://paletton.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/0to255.png" alt="0to255"></div>
+                            <h3>0to255</h3>
+                            <p>A simple tool that helps you find variations of any color. Perfect for hovers, borders and gradients.</p>
+                            <a href="http://www.0to255.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/coleure.png" alt="Coleure"></div>
+                            <h3>Coleure</h3>
+                            <p>Color management app that allows you to choose, mix and edit great colors.</p>
+                            <a href="https://www.coleure.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/colortemplate.png" alt="Learn about colors"></div>
+                            <h3>Learn about colors</h3>
+                            <p>If you want to learn about colors, this is the #1 resource to go.</p>
+                            <a href="http://www.rocket-design.fr/color-template/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
@@ -1768,7 +1918,6 @@
 
                     </article>
                 </section>
-
                 <!-- <section class="group group-" id=""></section>          
                 <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
