added ui graphics

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <input type="text" name="resource-url" id="" placeholder="Resource URL">
             <button type="submit">Submit</button>
         </form>
-        <p>Add a Resource</p>
+        <p>Add a Resource (if you have any in mind)</p>
     </section>
     <nav class="group-nav" id="category-nav">
         <!-- <div class="container"> -->
@@ -98,7 +98,7 @@
             <li><a href="#templates" class="group-nav-link">
                     <ion-icon name="newspaper-outline"></ion-icon>Templates
                 </a></li>
-            <li><a href="" class="group-nav-link">
+            <li><a href="#graphics" class="group-nav-link">
                     <ion-icon name="images-outline"></ion-icon>UI Graphics
                 </a></li>
             <li><a href="#colors" class="group-nav-link">
@@ -1335,8 +1335,11 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/" alt="pattern.css"></div>
                             <h3>pattern.css</h3>
-                            <p>If you're struggling to find beautiful patterns to fill your empty backgrounds check out pattern.css. It's an awesome CSS-only library that will make your web pages stand out!</p>
-                            <a href="https://bansal.io/pattern-css" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>If you're struggling to find beautiful patterns to fill your empty backgrounds check out
+                                pattern.css. It's an awesome CSS-only library that will make your web pages stand out!
+                            </p>
+                            <a href="https://bansal.io/pattern-css" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -2429,7 +2432,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="Unsplash"></div>
+                                <img src="/resources/icons/unsplash.png" alt="Unsplash"></div>
                             <h3>Unsplash</h3>
                             <p>My go-to site if I need to find images. Unsplash has an unbelievable gallery of
                                 royalty-free, high-resolution images for you to use.</p>
@@ -2440,7 +2443,17 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="Pixabay"></div>
+                                <img src="/resources/icons/thestocks.jpg" alt="The Stocks"></div>
+                            <h3>The Stocks</h3>
+                            <p>The best royalty free stock photos from multiple resources, all in one place.</p>
+                            <a href="http://thestocks.im/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/pixaby.png" alt="Pixabay"></div>
                             <h3>Pixabay</h3>
                             <p>Pixabay is another amazing resource for royalty-free images, videos, illustrations and
                                 vector graphics.</p>
@@ -2451,7 +2464,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="Pexels"></div>
+                                <img src="/resources/icons/pexels.png" alt="Pexels"></div>
                             <h3>Pexels</h3>
                             <p>A huge gallery of high-resolution, royalty-free images for you to choose from.</p>
                             <a href="https://www.pexels.com/" class="visit-btn" target="blank">Visit<ion-icon
@@ -2461,7 +2474,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="Pexels Videos"></div>
+                                <img src="/resources/icons/pexels.png" alt="Pexels Videos"></div>
                             <h3>Pexels Videos</h3>
                             <p>If it's royalty-free videos you're after, then Pexels Videos is an amazing resource with
                                 a huge library.</p>
@@ -2472,7 +2485,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="Coverr"></div>
+                                <img src="/resources/icons/coverr.png" alt="Coverr"></div>
                             <h3>Coverr</h3>
                             <p>7 new high-quality, beautiful videos every Monday. Amazing library of videos to choose
                                 from.</p>
@@ -2483,17 +2496,17 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="Optimizilla"></div>
-                            <h3>Optimizilla</h3>
-                            <p>A great tool for optimizing your PNG and JPEG images online.</p>
-                            <a href="https://imagecompressor.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                <img src="/resources/icons/tinypng.jpg" alt="TinyPNG"></div>
+                            <h3>TinyPNG</h3>
+                            <p>Make your website faster and save bandwidth. TinyPNG optimizes your PNG images by 50-80% while preserving full transparency!</p>
+                            <a href="https://tinypng.com/" class="visit-btn" target="blank">Visit<ion-icon
                                     name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="SVGOMG"></div>
+                                <img src="/resources/icons/svgomg.png" alt="SVGOMG"></div>
                             <h3>SVGOMG</h3>
                             <p>SVGOMG is the missing GUI for SVGO. If you have SVGs on your site and you need to
                                 optimize them, then this is the tool for you.</p>
@@ -2504,7 +2517,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="unDraw"></div>
+                                <img src="/resources/icons/undraw.png" alt="unDraw"></div>
                             <h3>unDraw</h3>
                             <p>unDraw is an incredible collection of beautiful illustrations. All illustrations are
                                 available under the MIT License, so you're free to use them any way you like.</p>
@@ -2515,7 +2528,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="DrawKit"></div>
+                                <img src="/resources/icons/drawkit.png" alt="DrawKit"></div>
                             <h3>DrawKit</h3>
                             <p>DrawKit is a collection of free, beautiful, and customizable SVG illustrations. All the
                                 free illustrations are available under the MIT License, so you're able to use them any
@@ -2527,7 +2540,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="humaaans"></div>
+                                <img src="/resources/icons/humaaans.png" alt="humaaans"></div>
                             <h3>humaaans</h3>
                             <p>This library of mix-and-match illustrations of people is a great resource to add some
                                 stylish imagery to your website.</p>
@@ -2538,7 +2551,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="Ouch!"></div>
+                                <img src="/resources/icons/ouch.png" alt="Ouch!"></div>
                             <h3>Ouch!</h3>
                             <p>Ouch! offers a library of beautiful vector illustrations in a range of styles. Perfect
                                 for when you're looking to add some extra style to your website.</p>
@@ -2549,7 +2562,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="Cool Backgrounds"></div>
+                                <img src="/resources/icons/coolbackgroundsio.jpg" alt="Cool Backgrounds"></div>
                             <h3>Cool Backgrounds</h3>
                             <p>Cool Backgrounds offers a selection of beautiful, enticing image backgrounds to add to
                                 your blog post, website, or wallpaper.</p>
@@ -2560,7 +2573,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="Get Waves"></div>
+                                <img src="/resources/icons/getwaves.jpg" alt="Get Waves"></div>
                             <h3>Get Waves</h3>
                             <p>Get Waves is a simple web app to generate SVG waves, which you can then use in your
                                 projects.</p>
@@ -2571,7 +2584,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="Blobmaker"></div>
+                                <img src="/resources/icons/blobmaker.jpg" alt="Blobmaker"></div>
                             <h3>Blobmaker</h3>
                             <p>Easily create random, unique, and organic-looking SVG shapes to use in your websites.</p>
                             <a href="https://www.blobmaker.app/" class="visit-btn" target="blank">Visit<ion-icon
@@ -2581,12 +2594,60 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="Blobs"></div>
+                                <img src="/resources/icons/blobs.png" alt="Blobs"></div>
                             <h3>Blobs</h3>
                             <p>Blobs helps you generate beautiful blob shapes for web and flutter apps.</p>
-                            <a href="https://blobs.app/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <a href="https://blobs.app/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/subtlepatterns.png" alt="Subtle Patterns"></div>
+                            <h3>Subtle Patterns</h3>
+                            <p>High quality resource of tilable textured patterns, completely free to use.</p>
+                            <a href="http://subtlepatterns.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/randomuser.png" alt="Random User Generator"></div>
+                            <h3>Random User Generator</h3>
+                            <p>Generate random user data, including photos. Like Lorem Ipsum, but for people.</p>
+                            <a href="https://randomuser.me/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/startupstock.png" alt="Startup Stock Photos"></div>
+                            <h3>Startup Stock Photos</h3>
+                            <p>Lots of great pictures of startup offices, people, devices and more. I love it.</p>
+                            <a href="http://startupstockphotos.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/canva.png" alt="Canva"></div>
+                            <h3>Canva</h3>
+                            <p>Easily create beautiful designs with drag-and-drop features and professional layouts.</p>
+                            <a href="https://www.canva.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/pinetools.png" alt="PineTools"></div>
+                            <h3>PineTools</h3>
+                            <p>Free Online Tools For Every Situation.</p>
+                            <a href="https://www.pinetools.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
