--- a/index.html
+++ b/index.html
@@ -2443,7 +2443,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/thestocks.jpg" alt="The Stocks"></div>
+                                <img src="/resources/icons/thestocks.png" alt="The Stocks"></div>
                             <h3>The Stocks</h3>
                             <p>The best royalty free stock photos from multiple resources, all in one place.</p>
                             <a href="http://thestocks.im/" class="visit-btn" target="blank">Visit<ion-icon
