adding UI Graphics

--- a/index.html
+++ b/index.html
@@ -1330,7 +1330,7 @@
                     <!-- ---------- section-cards ------ -->
 
                     <article class="group-cards">
-                       
+
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
@@ -2160,7 +2160,8 @@
                             <p>Line, Solid, Color & Flat icons with a precise and unified style.
                                 Adapts to any type of project with different stroke weights,
                                 color control and great legibility.</p>
-                            <a href="https://orioniconlibrary.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <a href="https://orioniconlibrary.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -2168,8 +2169,10 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/streamlineicons.png" alt="Streamline Icons"></div>
                             <h3>Streamline Icons</h3>
-                            <p>Over 10,500 in three different weights. 53 categories, 720 sub categories, and over 30,000 something in total.</p>
-                            <a href="https://streamlineicons.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>Over 10,500 in three different weights. 53 categories, 720 sub categories, and over
+                                30,000 something in total.</p>
+                            <a href="https://streamlineicons.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -2177,8 +2180,10 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/iconscout.png" alt="iconscout"></div>
                             <h3>Iconscout</h3>
-                            <p>Iconscout is a collection of millions of different icons, in every possible category you can just imagine</p>
-                            <a href="https://iconscout.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>Iconscout is a collection of millions of different icons, in every possible category you
+                                can just imagine</p>
+                            <a href="https://iconscout.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -2186,8 +2191,10 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/nucleoapp.png" alt="Nucleo"></div>
                             <h3>Nucleo</h3>
-                            <p>Nucleo is a beautiful library of 30635 icons, and a powerful application to collect, customize and export all your icons.</p>
-                            <a href="https://nucleoapp.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>Nucleo is a beautiful library of 30635 icons, and a powerful application to collect,
+                                customize and export all your icons.</p>
+                            <a href="https://nucleoapp.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ---------------- -->
@@ -2196,7 +2203,8 @@
                                 <img src="/resources/icons/openiconic.png" alt="OpenIconic"></div>
                             <h3>OpenIconic</h3>
                             <p>An open source icon set with 223 marks in SVG, webfont and raster formats</p>
-                            <a href="https://useiconic.com/open" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <a href="https://useiconic.com/open" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
 
@@ -2453,8 +2461,10 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/basin.png" alt=" Basin"></div>
                             <h3>Basin </h3>
-                            <p>An easy-to-configure form backend for static HTML sites, Wordpress, or any website. Trigger branded emails sent from your own domain.</p>
-                            <a href="https://usebasin.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            <p>An easy-to-configure form backend for static HTML sites, Wordpress, or any website.
+                                Trigger branded emails sent from your own domain.</p>
+                            <a href="https://usebasin.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
                             </a>
                         </div>
 
@@ -2746,7 +2756,7 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/paaatterns.svg" alt="Paaatterns"></div>
+                                <img src="/resources/icons/paaatterns.png" alt="Paaatterns"></div>
                             <h3>Paaatterns</h3>
                             <p>Use Paaatterns together with a powerful design system and speed up your workflow.</p>
                             <a href="https://products.ls.graphics/paaatterns/" class="visit-btn" target="blank">Visit
@@ -2762,6 +2772,15 @@
                                 emotions, accessories, and colors.</p>
                             <a href="https://avataaars.com/" class="visit-btn" target="blank">Visit<ion-icon
                                     name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/patterncss.jpg" alt="pattern.css "></div>
+                            <h3>pattern.css </h3>
+                            <p>CSS only library to fill your empty background with beautiful patterns. </p>
+                            <a href="https://bansal.io/pattern-css" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
                             </a>
                         </div>
                         <!-- ------------ card ----------------
@@ -2814,9 +2833,10 @@
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/uispace.png" alt="UI Space"></div>
+                                <img src="/resources/icons/uispace.jpg" alt="UI Space"></div>
                             <h3>UI Space</h3>
-                            <p>Thousands of great freebies </p>
+                            <p>High quality hand-crafted Free Sketch files, PSDs and AI freebies, free fonts, mockups,
+                                the latest free icons sets and other free vectorial resources.</p>
                             <a href="https://uispace.net/" class="visit-btn" target="blank">Visit<ion-icon
                                     name="open-outline"></ion-icon>
                             </a>
@@ -2856,6 +2876,17 @@
                                 <ion-icon name="open-outline"></ion-icon>
                             </a>
                         </div>
+                        <!-- ------------ card ---------------- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/handz.jpg" alt="handz.design"></div>
+                            <h3>handz.design</h3>
+                            <p>This is free 3D hands gestures library for any occasion.</p>
+                            <a href="https://www.handz.design/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+
                         <!-- ------------ card ---------------- -->
                         <div class="card">
                             <div class="icon-box">
